--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
+    // mapStruct
+    implementation "org.mapstruct:mapstruct:1.5.5.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
 }
 
 tasks.named('test') {
