--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-pring.datasource.url=jdbc:mysql://localhost:${DB_PORT}/${DB_DATABASE_NAME}
+spring.datasource.url=jdbc:mysql://localhost:${DB_PORT}/${DB_DATABASE_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,11 +9,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 
 jwt.secret.key=${JWT_SECRET_KEY}
-
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.force=true
